--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,8 @@
     "pm2": "^5.3.0",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "studio": "^0.13.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
