--- a/api/package.json
+++ b/api/package.json
@@ -26,11 +26,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.0",
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "pm2": "^5.3.0",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
