Changing API for deploy at Render

--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,13 @@
 {
   "name": "api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "API para gerenciar o banco de dados dos pacientes em um consultório médico",
+  "author": "Eduardo Birgiman Domingues",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
