--- a/api/package.json
+++ b/api/package.json
@@ -28,8 +28,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.1.0",
+    "@nestjs/mapped-types": "2.0.2",
+    "@nestjs/platform-express": "^10.1.3",
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
