Adding new enviroment variables

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://root:root@localhost:5432/consultorio?schema=public"
 JWT_SECRET=unsecure_jwt_secret
+FRONT_END_DEV_URL="http://localhost:5173"
+FRONT_END_PROD_URL="unsecure_prod_url"
