--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^1.0.0",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
