--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.16",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/themes": "^1.0.0",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.14.2",
+    "react-sticky-el": "^2.1.0",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.21.4"
   },
