--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-sticky-el": "^2.1.0",
     "tailwind-merge": "^1.14.0",
