--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:docker": "docker start pg && nest start --watch",
-    "start:prisma": "start \"\" \"C:/Program Files/Git/git-bash.exe\" -c 'start.sh'",
+    "start:prisma": "prisma studio --port 5555 --hostname 0.0.0.0",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
